# just-rng

./: Cargo.toml  README.md
src/: lib.rs  perm.rs  primes.rs  seed.rs  wyrand.rs
